--- a/vignettes/internals.Rmd
+++ b/vignettes/internals.Rmd
@@ -145,10 +145,10 @@ function(n, acc) {
     if (.__true_p(n < 2)) {
       return(acc)
     } else {
-      .tco_n <- n - 1
-      .tco_acc <- acc * n
-      n <- .tco_n
-      acc <- .tco_acc
+      .__tco_n <- n - 1
+      .__tco_acc <- acc * n
+      n <- .__tco_n
+      acc <- .__tco_acc
       next
     }
   }
