--- a/README.Rmd
+++ b/README.Rmd
@@ -261,7 +261,7 @@ access to all base R functions.
 - `+`, `-`, `*`, `/`, `%`, `=`, `<`, `>`, `<=`, `>=`
 - `not`
 
-For detailed documentation of all functions, see the [**Standard Library Reference**](docs/stdlib-reference.md).
+For detailed documentation of all functions, see the [**Standard Library Reference**](articles/stdlib-reference.html).
 
 The full standard library is loaded automatically for convenience. It is organized into modules, each in `inst/arl/`, which you can also import individually in your own modules or when working with a bare engine (`Engine$new(load_stdlib = FALSE)`):
 
