--- a/vignettes/stdlib-macro-eval-interop.Rmd
+++ b/vignettes/stdlib-macro-eval-interop.Rmd
@@ -1117,3 +1117,43 @@ Return the current Arl evaluation environment.
 
 ---
 
+## Documentation Helpers {#section-documentation-helpers}
+
+### doc! {#doc-bang}
+
+Attach documentation fields to a function. With a single
+string argument, sets the description (backward compatible). With keyword
+arguments, sets specific fields and merges with existing documentation.
+
+**Signature:** `(doc! fn "docstring") or (doc! fn :description "..." :examples "...")`
+
+**Examples:**
+```{arl}
+(doc! my-fn "Doubles the input.")
+(doc! my-fn :examples "(my-fn 3) ; => 6")
+(doc! my-fn :description "Doubles." :note "Fast path.")
+```
+
+**See also:** [doc](#doc), help
+
+---
+
+### doc {#doc}
+
+Retrieve documentation from a function. With no field argument,
+returns the description. Pass a field name string to get a specific field,
+or "all" to get the full documentation list.
+
+**Signature:** `(doc fn) or (doc fn "field")`
+
+**Examples:**
+```{arl}
+(doc my-fn)              ; => "Doubles the input."
+(doc my-fn "examples")   ; => "(my-fn 3) ; => 6"
+(doc my-fn "all")        ; => named list of all fields
+```
+
+**See also:** [doc!](#doc-bang), help
+
+---
+
