--- a/vignettes/stdlib-macro-eval-interop.Rmd
+++ b/vignettes/stdlib-macro-eval-interop.Rmd
@@ -1128,7 +1128,7 @@ arguments, sets specific fields and merges with existing documentation.
 **Signature:** `(doc! fn "docstring") or (doc! fn :description "..." :examples "...")`
 
 **Examples:**
-```{arl}
+```{arl, eval=FALSE}
 (doc! my-fn "Doubles the input.")
 (doc! my-fn :examples "(my-fn 3) ; => 6")
 (doc! my-fn :description "Doubles." :note "Fast path.")
@@ -1147,7 +1147,7 @@ or "all" to get the full documentation list.
 **Signature:** `(doc fn) or (doc fn "field")`
 
 **Examples:**
-```{arl}
+```{arl, eval=FALSE}
 (doc my-fn)              ; => "Doubles the input."
 (doc my-fn "examples")   ; => "(my-fn 3) ; => 6"
 (doc my-fn "all")        ; => named list of all fields
